--- a/hello.html
+++ b/hello.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello, I'm Si Ni</p>
-    <h1>Hello World</h1>
-
-    <p>Today is 2020-07-01</p>
+    <h1>Nini is cute</h1>
 </body>
 </html>
